[tool.poetry]
name = "fastapiauth"
version = "0.1.0"
description = ""
authors = ["Artem Muzychuk <muzychukartem.music@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"
aiosqlite = "^0.20.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
